minor update jvm configuration